--- a/raffle/raffle.css
+++ b/raffle/raffle.css
@@ -1,9 +1,7 @@
 #winner-announcement-popup {
     position: relative;
     background: #FFF;
-    padding: 20px;
     width: 100%;
-    margin: 20px auto;
 }
 
 .mfp-content {
